# agno-simple-knowledge

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  LOGGING.md  LRO_IMPLEMENTATION.md  README.md  TEST_RESULTS.md  config.yaml  debug_indexer.py  debug_pdf.py  debug_vector_db.py  index.html  knowledge-system-design-v1.md  main.py  package-lock.json  package.json  requirements.txt  test_pdf_improvements.py  test_system.py  vite.config.ts
python-backend/: main.py  requirements.txt
python-backend/api/routes/: chat.py  documents.py  operations.py  system.py
python-backend/core/: agno_knowledge.py  chat_agent.py  chat_service.py  config.py  document_service.py  indexer.py  knowledge_system.py  knowledge_team.py  operation_manager.py  query_engine.py
python-backend/tmp/: operations.db  team_memory.db
scripts/: build.sh  dev.sh
src/: App.tsx  __init__.py  agno_knowledge.py  chat_agent.py  config.py  indexer.py  query_engine.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/chat/: ChatInterface.tsx
src/components/documents/: DocumentManager.tsx
src/components/layout/: AppLayout.tsx
src/lib/: api.ts  tauri-api.ts
tmp/: operations.db
ui/: macos_app.py
